Fixed bug where images on carousel would overlap container

--- a/app/public/wp-content/themes/graphic-point-full-site/assets/main.scss
+++ b/app/public/wp-content/themes/graphic-point-full-site/assets/main.scss
@@ -1153,6 +1153,10 @@ body {
 									width: 219px;
 								}
 
+								img {
+									width: 100%;
+								}
+
 								.item-content-container {
 									width: 150px;
 									display: block;
